mejor estilo, busqueda palabras clave, mejora colecciones

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -64,7 +64,22 @@
     "noReviews": "No reviews available for this movie",
     "collection": "Collection",
     "viewCollection": "View full collection",
-    "partOfCollection": "Part of the collection"
+    "partOfCollection": "Part of the collection",
+    "overview": "Overview",
+    "cast": "Cast",
+    "noCast": "No cast information available",
+    "whereToWatch": "Where to Watch",
+    "videos": "Videos",
+    "noVideos": "No videos available for this movie",
+    "recommendations": "Recommendations",
+    "noRecommendations": "No recommendations available for this movie"
+  },
+  "collection": {
+    "movies": "movies",
+    "allMovies": "All movies in the collection",
+    "releaseDate": "Release date",
+    "overview": "Overview",
+    "noOverview": "No overview available for this collection"
   },
   "search": {
     "title": "Advanced Search",
@@ -72,32 +87,37 @@
     "applyFilters": "Apply Filters",
     "resetFilters": "Reset Filters",
     "sortBy": "Sort By",
-    "genres": "Genres",
     "year": "Year",
+    "genre": "Genre",
     "rating": "Rating",
+    "runtime": "Runtime",
     "language": "Language",
-    "adult": "Adult Content",
-    "includeAdult": "Include Adult Content",
-    "excludeAdult": "Exclude Adult Content",
-    "searchResults": "Search Results",
-    "searchPlaceholder": "Search movies, actors, directors...",
-    "popularity": "Popularity",
-    "releaseDate": "Release Date",
-    "voteAverage": "Vote Average",
-    "voteCount": "Vote Count",
-    "originalTitle": "Original Title",
-    "ascending": "Ascending",
-    "descending": "Descending",
-    "fromYear": "From Year",
-    "toYear": "To Year",
-    "minRating": "Minimum Rating",
-    "maxRating": "Maximum Rating",
-    "watchProviders": "Streaming Providers",
-    "selectProviders": "Select Providers",
-    "actors": "Actors",
-    "directors": "Directors",
-    "searchActors": "Search Actors",
-    "searchDirectors": "Search Directors"
+    "searchActors": "Search actors",
+    "searchDirectors": "Search directors"
+  },
+  "filters": {
+    "title": "Filters",
+    "showFilters": "Show filters",
+    "hideFilters": "Hide filters",
+    "sortBy": "Sort by",
+    "popularityDesc": "Popularity (high to low)",
+    "popularityAsc": "Popularity (low to high)",
+    "ratingDesc": "Rating (high to low)",
+    "ratingAsc": "Rating (low to high)",
+    "releaseDateDesc": "Release date (newest first)",
+    "releaseDateAsc": "Release date (oldest first)",
+    "revenueDesc": "Revenue (high to low)",
+    "revenueAsc": "Revenue (low to high)",
+    "year": "Year",
+    "selectYear": "Select year",
+    "allYears": "All years",
+    "genres": "Genres",
+    "selectGenres": "Select genres",
+    "loadingGenres": "Loading genres...",
+    "minRating": "Minimum rating",
+    "includeAdult": "Include adult content",
+    "reset": "Reset filters",
+    "apply": "Apply filters"
   },
   "calendar": {
     "title": "Release Calendar",
