filtros, idiomas, estructura, y arreglos web

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -93,7 +93,8 @@
     "runtime": "Runtime",
     "language": "Language",
     "searchActors": "Search actors",
-    "searchDirectors": "Search directors"
+    "searchDirectors": "Search directors",
+    "searchPlaceholder": "Search"
   },
   "filters": {
     "title": "Filters",
