--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -95,7 +95,7 @@
     "includeAdult": "Incluir contenido adulto",
     "excludeAdult": "Excluir contenido adulto",
     "searchResults": "Resultados de búsqueda",
-    "searchPlaceholder": "Buscar películas, actores, directores...",
+    "searchPlaceholder": "Buscar",
     "popularity": "Popularidad",
     "releaseDate": "Fecha de estreno",
     "voteAverage": "Valoración media",
