new sections series tv

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,7 @@
     "home": "Home",
     "movies": "Movies",
     "series": "TV Shows",
+    "people": "People",
     "favorites": "Favorites",
     "advancedSearch": "Advanced Search",
     "releaseCalendar": "Release Calendar",
@@ -20,7 +21,14 @@
     "exploreMovies": "Explore",
     "readMore": "Read more",
     "readLess": "Read less",
-    "viewOriginal": "View original"
+    "viewOriginal": "View original",
+    "popularPeople": "Popular People",
+    "searchPeople": "Search People",
+    "popularTVShows": "Popular TV Shows",
+    "topRatedTVShows": "Top Rated TV Shows",
+    "onTheAirTVShows": "On The Air",
+    "airingTodayTVShows": "Airing Today",
+    "tvShows": "TV Shows"
   },
   "home": {
     "welcome": "Welcome to CineFinder",
@@ -80,6 +88,34 @@
     "releaseDate": "Release date",
     "overview": "Overview",
     "noOverview": "No overview available for this collection"
+  },
+  "tv": {
+    "details": "TV Show Details",
+    "cast": "Cast",
+    "crew": "Crew",
+    "seasons": "Seasons",
+    "episodes": "Episodes",
+    "videos": "Videos",
+    "similar": "Similar TV Shows",
+    "recommendations": "Recommendations",
+    "whereToWatch": "Where to Watch",
+    "overview": "Overview",
+    "firstAirDate": "First Air Date",
+    "lastAirDate": "Last Air Date",
+    "status": "Status",
+    "creators": "Creators",
+    "networks": "Networks",
+    "episodeRuntime": "Episode Runtime",
+    "numberOfSeasons": "Seasons",
+    "numberOfEpisodes": "Episodes",
+    "originalLanguage": "Original Language",
+    "addToFavorites": "Add to Favorites",
+    "removeFromFavorites": "Remove from Favorites",
+    "watchTrailer": "Watch Trailer",
+    "season": "Season",
+    "airDate": "Air Date",
+    "episodeCount": "Episode Count",
+    "noOverview": "No overview available for this TV show"
   },
   "search": {
     "title": "Advanced Search",
