--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -10,6 +10,7 @@
     "home": "Inicio",
     "movies": "Películas",
     "series": "Series",
+    "people": "Personas",
     "favorites": "Favoritos",
     "advancedSearch": "Búsqueda avanzada",
     "releaseCalendar": "Calendario de estrenos",
@@ -20,7 +21,14 @@
     "exploreMovies": "Explorar",
     "readMore": "Leer más",
     "readLess": "Leer menos",
-    "viewOriginal": "Ver original"
+    "viewOriginal": "Ver original",
+    "popularPeople": "Personas populares",
+    "searchPeople": "Buscar personas",
+    "popularTVShows": "Series populares",
+    "topRatedTVShows": "Series mejor valoradas",
+    "onTheAirTVShows": "Series en emisión",
+    "airingTodayTVShows": "Series de hoy",
+    "tvShows": "Series de TV"
   },
   "home": {
     "welcome": "Bienvenido a CineFinder",
@@ -80,6 +88,34 @@
     "releaseDate": "Fecha de estreno",
     "overview": "Resumen",
     "noOverview": "No hay descripción disponible para esta colección"
+  },
+  "tv": {
+    "details": "Detalles de la serie",
+    "cast": "Reparto",
+    "crew": "Equipo",
+    "seasons": "Temporadas",
+    "episodes": "Episodios",
+    "videos": "Vídeos",
+    "similar": "Series similares",
+    "recommendations": "Recomendaciones",
+    "whereToWatch": "Dónde ver",
+    "overview": "Resumen",
+    "firstAirDate": "Fecha de estreno",
+    "lastAirDate": "Último episodio",
+    "status": "Estado",
+    "creators": "Creadores",
+    "networks": "Cadenas",
+    "episodeRuntime": "Duración por episodio",
+    "numberOfSeasons": "Temporadas",
+    "numberOfEpisodes": "Episodios",
+    "originalLanguage": "Idioma original",
+    "addToFavorites": "Añadir a favoritos",
+    "removeFromFavorites": "Quitar de favoritos",
+    "watchTrailer": "Ver tráiler",
+    "season": "Temporada",
+    "airDate": "Fecha de emisión",
+    "episodeCount": "Número de episodios",
+    "noOverview": "No hay descripción disponible para esta serie"
   },
   "search": {
     "title": "Búsqueda avanzada",
